--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills">
+<ul class="nav nav-pills nav_margin_fix">
     <li role="presentation"><a ng-href="#!/login">Login</a></li>
     <li role="presentation"><a ng-href="#!/contacts/view">View Contacts</a></li>
     <li role="presentation"><a ng-href="#!/contacts/new">New Contact</a></li>
