users can authenticate with google

--- a/partials/login.html
+++ b/partials/login.html
@@ -1,6 +1,6 @@
 <div class='text-center' id='login'>
     <h1>Sign In</h1>
-    <a class="btn btn-lg btn-social btn-google">
+    <a ng-click='authenticate()' class="btn btn-lg btn-social btn-google">
         <span class="fa fa-google"></span>
             Sign in with Google
     </a>
