--- a/partials/contacts-new.html
+++ b/partials/contacts-new.html
@@ -1,4 +1,65 @@
-<div class='text-center' id='new_contact'>
-    <h1>Hello</h1>
-    {{controller}}
+<div id='new_contact'>        
+    <!-- <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#myModal">
+        Create New Contact
+      </button>       -->
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">New Contact</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputPhoneNumber" placeholder="Phone Number">
+                        </div>
+                    </div>
+                    <div class="form-group">                        
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputAddress" placeholder="Address">
+                            </div>
+                        </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputBirthday" placeholder="Birthday">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputCompany" placeholder="Company">
+                        </div>
+                    </div>                            
+                </form>
+                <button type="button" class="btn btn-default">Save contact</button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>              
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
+<!-- "name_first": "Dan5",
+"name_last": "Danimal5",
+"address": "123 Fake Street5",
+"birthday": "April, 5",
+"company": "The Dan Company5",
+"email": "Danimal5@idk.com",
+"phone": 1234567899, -->
