--- a/partials/contacts-new.html
+++ b/partials/contacts-new.html
@@ -1,4 +1,5 @@
-<div id='new_contact'>        
+<div id='new_contact' class='text-center'>    
+    <button class='btn btn-default' data-toggle="modal" data-target="#myModal">CLICK</button>    
       <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
