--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -4,6 +4,6 @@
 <ul class="nav nav-pills nav-stacked contacts_nav" ng-show="uid">        
     <li role="presentation"><a ng-href="#!/contacts/view">View Contacts</a></li>
     <li role="presentation"><a ng-href="#!/contacts/favorites">Favorites</a></li>
-    <li role="presentation" data-toggle="modal" data-target="#myModal"><a ng-href="#!/contacts/new">Create New Contact</a></li>
+    <li role="presentation"><a ng-href="#!/contacts/new">Create New Contact</a></li>
     <li role="presentation"><a ng-href="#!/login">Logout</a></li>
 </ul>
