--- a/styles/main.css
+++ b/styles/main.css
@@ -27,3 +27,7 @@ a {
 a:focus, a:hover {
   color: #ffffff;
   text-decoration: underline; }
+
+#new_contact .align_left {
+  position: relative;
+  right: 230px; }
