--- a/partials/contacts-new.html
+++ b/partials/contacts-new.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>                            
                 </form>
-                <button type="button" class="btn btn-default">Save contact</button>
+                <button type="button" class="align_left btn btn-default">Save contact</button>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>              
