--- a/partials/contacts-new.html
+++ b/partials/contacts-new.html
@@ -11,7 +11,7 @@
                 <form class="form-horizontal">
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
+                            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" required>
                         </div>
                     </div>
                     <div class="form-group">
