--- a/partials/contacts-view.html
+++ b/partials/contacts-view.html
@@ -1,4 +1,19 @@
 <div class='text-center' id='view_contacts'>
-    <h1>Hello</h1>
-    {{controller}}
+    <h1>Contacts</h1>
+    <div id='contacts'>
+        <div ng-repeat="contact in contacts" class="col-sm-6 col-md-4 movie">
+            <div class="thumbnail">                                    
+                <div class="caption">
+                    <h3>Id: {{contact.id}}</h3>
+                    <h3 class='name_first'>First Name: {{contact.name_first}}</h3>
+                    <h3 class='name_last'>Last Name: {{contact.name_last}}</h3>
+                    <h3 class='address'>Address: {{contact.address}}</h3>
+                    <h3 class='birthday'>Birthday: {{contact.birthday}}</h3>
+                    <h3 class='company'>Company: {{contact.company}}</h3>
+                    <h3 class='email'>Email: {{contact.email}}</h3>
+                    <h3 class='phone'>Phone: {{contact.phone}}</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
