contacts saving to firebase

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,25 +7,28 @@ a {
     color: $link-color; 
 }
 #nav_container {
-    width: 12%;    
+    
+    width: 12%;   
+
+    .nav_margin_fix {
+        margin: 10px 25px;
+    }
+    .nav-stacked>li>a {
+        border-radius: 0px;
+    }
+    .nav-pills>li>a {
+        border-radius: 0px;
+        width: 100%;
+    }
+    .contacts_nav {
+        padding-top: 1em;
+    }
+    .nav>li>a:focus, .nav>li>a:hover {
+        text-decoration: none;
+        background-color: #3a3a3a;
+    }    
 }
-.nav_margin_fix {
-    margin: 10px 25px;
-}
-.nav-stacked>li>a {
-    border-radius: 0px;
-}
-.nav-pills>li>a {
-    border-radius: 0px;
-    width: 100%;
-}
-.contacts_nav {
-    padding-top: 1em;
-}
-.nav>li>a:focus, .nav>li>a:hover {
-    text-decoration: none;
-    background-color: #3a3a3a;
-}
+
 a:focus, a:hover {
     color: #ffffff;
     text-decoration: underline;
@@ -34,5 +37,6 @@ a:focus, a:hover {
     .align_left {
         position: relative;
         right: 230px;
+        margin-bottom: 15px;
     }
 }
