--- a/styles/main.css
+++ b/styles/main.css
@@ -6,23 +6,18 @@ a {
 
 #nav_container {
   width: 12%; }
-
-.nav_margin_fix {
-  margin: 10px 25px; }
-
-.nav-stacked > li > a {
-  border-radius: 0px; }
-
-.nav-pills > li > a {
-  border-radius: 0px;
-  width: 100%; }
-
-.contacts_nav {
-  padding-top: 1em; }
-
-.nav > li > a:focus, .nav > li > a:hover {
-  text-decoration: none;
-  background-color: #3a3a3a; }
+  #nav_container .nav_margin_fix {
+    margin: 10px 25px; }
+  #nav_container .nav-stacked > li > a {
+    border-radius: 0px; }
+  #nav_container .nav-pills > li > a {
+    border-radius: 0px;
+    width: 100%; }
+  #nav_container .contacts_nav {
+    padding-top: 1em; }
+  #nav_container .nav > li > a:focus, #nav_container .nav > li > a:hover {
+    text-decoration: none;
+    background-color: #3a3a3a; }
 
 a:focus, a:hover {
   color: #ffffff;
@@ -30,4 +25,5 @@ a:focus, a:hover {
 
 #new_contact .align_left {
   position: relative;
-  right: 230px; }
+  right: 230px;
+  margin-bottom: 15px; }
