--- a/partials/contacts-new.html
+++ b/partials/contacts-new.html
@@ -1,4 +1,4 @@
-<div id='new_contact' class='text-center'>    
+<div id='new_contact' class='text-center' ng-controller="NewCtrl">    
     <button class='btn btn-default' data-toggle="modal" data-target="#myModal">CLICK</button>    
       <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
@@ -8,45 +8,44 @@
               <h4 class="modal-title" id="myModalLabel">New Contact</h4>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal">
+                <form name='contactsForm' class="form-horizontal">
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" required>
+                            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" ng-model="user.name_first" ng-required="true">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+                            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" ng-model="user.name_last" ng-required="true">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputPhoneNumber" placeholder="Phone Number">
+                            <input type="text" class="form-control" id="inputPhoneNumber" placeholder="Phone Number" ng-model="user.phone" ng-required="true">
                         </div>
                     </div>
                     <div class="form-group">                        
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputAddress" placeholder="Address">
+                                <input type="text" class="form-control" id="inputAddress" placeholder="Address" ng-model="user.address" ng-required="true">
                             </div>
                         </div>
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email" ng-model="user.email" ng-required="true">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputBirthday" placeholder="Birthday">
+                            <input type="text" class="form-control" id="inputBirthday" placeholder="Birthday" ng-model="user.birthday" ng-required="true">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputCompany" placeholder="Company">
+                            <input type="text" class="form-control" id="inputCompany" placeholder="Company" ng-model="user.company" ng-required="true">
                         </div>
                     </div>                            
                 </form>
-                <button type="button" class="align_left btn btn-default">Save contact</button>
-            </div>
+                <button ng-disabled="contactsForm.$invalid" type="button" class="align_left btn btn-default"  data-dismiss="modal" ng-click="submitThisForm(user)">Save Contact</button>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>              
             </div>
