contact card styles and page layout

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,5 +1,5 @@
 <div ng-controller="NavCtrl">
-    <ul class="nav nav-pills nav_margin_fix" ng-show="!uid">
+    <ul class="nav" ng-show="!uid">
         <li role="presentation"><a ng-href="#!/login">Login</a></li>        
     </ul>
     <ul class="nav nav-pills nav-stacked contacts_nav" ng-show="uid">        
