--- a/partials/contacts-view.html
+++ b/partials/contacts-view.html
@@ -1,24 +1,26 @@
-<div class='' id='view_contacts'>
-    <h1>Contacts</h1>
+<div class='' id='view_contacts'>        
+    <h1 id="contacts_heading">Contacts</h1>
     <div id='contacts'>
-        <div ng-repeat="contact in contacts" class="col-sm-6 col-md-4 movie">
-            <div class="thumbnail">                                    
+        <div ng-repeat="contact in contacts" class="col-sm-6 col-md-4">
+            <div class="thumbnail contact">                                    
                 <div class="caption">
 
-                    <div class="panel panel-info">
+                    <div class="panel panel_margin_fix panel-info">
                         <div class="panel-heading">
-                            <h3 class="panel-title">{{contact.name_first}} {{contact.name_last}}</h3>
+                                <a ng-click="deleteContact(contact.id)"><i id="trash" class="fa fa-trash-o" aria-hidden="true"></i></a>
+                            <h1 class="panel-title">{{contact.name_first}} {{contact.name_last}}</h1>
                         </div>
                         <div class="panel-body">
-                            <h4>Contact details</h4>
-                            <p class='phone'>Phone: {{contact.phone}}</p>
-                            <p class='address'>Address: {{contact.address}}</p>
-                            <p class='birthday'>Birthday: {{contact.birthday}}</p>
-                            <p class='company'>Company: {{contact.company}}</p>
-                            <p class='email'>Email: {{contact.email}}</p>      
+                            <h4><i class="fa fa-info" aria-hidden="true"></i> Contact details</h4>
+                            <p class='phone'><i class="fa fa-phone" aria-hidden="true"></i> {{contact.phone}}</p>
+                            <p class='address'><i class="fa fa-address-card" aria-hidden="true"></i> {{contact.address}}</p>
+                            <p class='birthday'><i class="fa fa-calendar" aria-hidden="true"></i> {{contact.birthday}}</p>
+                            <p class='company'><i class="fa fa-briefcase" aria-hidden="true"></i> {{contact.company}}</p>
+                            <p class='email'><i class="fa fa-envelope" aria-hidden="true"></i> {{contact.email}}</p>      
                         </div>
                     </div>
-                    <button ng-click="deleteContact(contact.id)" class='btn btn-danger'>Remove</button>
+                    
+                    <!-- <button ng-click="deleteContact(contact.id)" class='btn btn-danger'>Remove</button> -->
                 </div>
             </div>
         </div>
