--- a/partials/login.html
+++ b/partials/login.html
@@ -1,5 +1,5 @@
 <div class='text-center' id='login'>
-    <h1>Sign In</h1>
+    <h1><i class="fa fa-address-book"></i> My Contacts</h1>
     <a ng-click='authenticate()' class="btn btn-lg btn-social btn-google">
         <span class="fa fa-google"></span>
             Sign in with Google
