--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,9 +19,10 @@ a {
     .nav-pills>li>a {
         border-radius: 0px;
         width: 100%;
+        padding-left: 24px;
     }
     .contacts_nav {
-        padding-top: 1em;
+        margin-top: 5em;
     }
     .nav>li>a:focus, .nav>li>a:hover {
         text-decoration: none;
@@ -39,4 +40,30 @@ a:focus, a:hover {
         right: 230px;
         margin-bottom: 15px;
     }
+}
+.fa-trash-o {
+    position: absolute;
+    left: 420px;
+}
+#contacts_heading {
+    margin-left: 18px;    
+}
+#view_contacts {
+    margin-left: 190px;
+    margin-top: -220px;
+}
+#trash {
+    position: absolute;
+    left: 363px;
+}
+.panel_margin_fix {
+    margin-bottom: 2px;    
+}
+.panel-info>.panel-heading {
+    color: $panel-heading-color;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+.contact {
+    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.75);
 }
