--- a/styles/main.css
+++ b/styles/main.css
@@ -12,9 +12,10 @@ a {
     border-radius: 0px; }
   #nav_container .nav-pills > li > a {
     border-radius: 0px;
-    width: 100%; }
+    width: 100%;
+    padding-left: 24px; }
   #nav_container .contacts_nav {
-    padding-top: 1em; }
+    margin-top: 5em; }
   #nav_container .nav > li > a:focus, #nav_container .nav > li > a:hover {
     text-decoration: none;
     background-color: #3a3a3a; }
@@ -27,3 +28,29 @@ a:focus, a:hover {
   position: relative;
   right: 230px;
   margin-bottom: 15px; }
+
+.fa-trash-o {
+  position: absolute;
+  left: 420px; }
+
+#contacts_heading {
+  margin-left: 18px; }
+
+#view_contacts {
+  margin-left: 190px;
+  margin-top: -220px; }
+
+#trash {
+  position: absolute;
+  left: 363px; }
+
+.panel_margin_fix {
+  margin-bottom: 2px; }
+
+.panel-info > .panel-heading {
+  color: #0785d6;
+  background-color: #d9edf7;
+  border-color: #bce8f1; }
+
+.contact {
+  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.75); }
