--- a/partials/contacts-new.html
+++ b/partials/contacts-new.html
@@ -1,4 +1,4 @@
-<div id='new_contact' class='text-center container' ng-controller="NewCtrl">    
+<div id='new_contact' class='text-center container'>    
     <h4 class="modal-title" id="myModalLabel">New Contact</h4>
     <form name='contactsForm' class="form-horizontal">
         <div class="form-group">
