--- a/partials/contacts-view.html
+++ b/partials/contacts-view.html
@@ -1,4 +1,4 @@
-<div class='' id='view_contacts'>        
+<div class='' id='view_contacts' ng-controller="ViewCtrl">        
     <h1 id="contacts_heading">Contacts</h1>
     <div id='contacts'>
         <div ng-repeat="contact in contacts" class="col-sm-6 col-md-4">
@@ -7,7 +7,9 @@
 
                     <div class="panel panel_margin_fix panel-info">
                         <div class="panel-heading">
+                            <div class='icon_positioning'>
                                 <a ng-click="deleteContact(contact.id)"><i id="trash" class="fa fa-trash-o" aria-hidden="true"></i></a>
+                            </div>
                             <h1 class="panel-title">{{contact.name_first}} {{contact.name_last}}</h1>
                         </div>
                         <div class="panel-body">
@@ -18,9 +20,7 @@
                             <p class='company'><i class="fa fa-briefcase" aria-hidden="true"></i> {{contact.company}}</p>
                             <p class='email'><i class="fa fa-envelope" aria-hidden="true"></i> {{contact.email}}</p>      
                         </div>
-                    </div>
-                    
-                    <!-- <button ng-click="deleteContact(contact.id)" class='btn btn-danger'>Remove</button> -->
+                    </div>            
                 </div>
             </div>
         </div>
