--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,8 +6,7 @@ body {
 a {
     color: $link-color; 
 }
-#nav_container {
-    
+#nav_container {    
     width: 12%;   
 
     .nav_margin_fix {
@@ -29,7 +28,6 @@ a {
         background-color: #3a3a3a;
     }    
 }
-
 a:focus, a:hover {
     color: #ffffff;
     text-decoration: underline;
@@ -41,20 +39,12 @@ a:focus, a:hover {
         margin-bottom: 15px;
     }
 }
-.fa-trash-o {
-    position: absolute;
-    left: 420px;
-}
 #contacts_heading {
     margin-left: 18px;    
 }
 #view_contacts {
     margin-left: 190px;
     margin-top: -220px;
-}
-#trash {
-    position: absolute;
-    left: 363px;
 }
 .panel_margin_fix {
     margin-bottom: 2px;    
@@ -66,4 +56,8 @@ a:focus, a:hover {
 }
 .contact {
     box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.75);
+    position: relative;
+}
+.icon_positioning {
+    float: right;
 }
