adding contact edit functionality

--- a/partials/contacts-new.html
+++ b/partials/contacts-new.html
@@ -1,5 +1,5 @@
 <div id='new_contact' class='text-center container'>    
-    <h4 class="modal-title" id="myModalLabel">New Contact</h4>
+    <h4>New Contact</h4>
     <form name='contactsForm' class="form-horizontal">
         <div class="form-group">
                 <div class="col-md-6 col-md-offset-3 text-center">
