--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,7 @@ a:focus, a:hover {
 #contacts_heading {
   margin-left: 18px; }
 
-#view_contacts {
+.view_contacts {
   margin-left: 190px;
   margin-top: -220px; }
 
@@ -50,3 +50,9 @@ a:focus, a:hover {
 
 .icon_positioning {
   float: right; }
+
+#star {
+  padding-right: 5px; }
+
+#pencil {
+  padding-right: 5px; }
