--- a/partials/contacts-new.html
+++ b/partials/contacts-new.html
@@ -3,39 +3,39 @@
     <form name='contactsForm' class="form-horizontal">
         <div class="form-group">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" ng-model="user.name_first" ng-required="true">
+                <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" ng-model="contact.name_first" ng-required="true">
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-6 col-md-offset-3 text-center">
-                <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" ng-model="user.name_last" ng-required="true">
+                <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" ng-model="contact.name_last" ng-required="true">
             </div>
         </div>
         <div class="form-group">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                <input type="text" class="form-control" id="inputPhoneNumber" placeholder="Phone Number" ng-model="user.phone" ng-required="true">
+                <input type="text" class="form-control" id="inputPhoneNumber" placeholder="Phone Number" ng-model="contact.phone" ng-required="true">
             </div>
         </div>
         <div class="form-group">                        
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <input type="text" class="form-control" id="inputAddress" placeholder="Address" ng-model="user.address" ng-required="true">
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Address" ng-model="contact.address" ng-required="true">
                 </div>
             </div>
         <div class="form-group">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email" ng-model="user.email" ng-required="true">
+                <input type="email" class="form-control" id="inputEmail3" placeholder="Email" ng-model="contact.email" ng-required="true">
             </div>
         </div>
         <div class="form-group">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                <input type="text" class="form-control" id="inputBirthday" placeholder="Birthday" ng-model="user.birthday" ng-required="true">
+                <input type="text" class="form-control" id="inputBirthday" placeholder="Birthday" ng-model="contact.birthday" ng-required="true">
             </div>
         </div>
         <div class="form-group">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                <input type="text" class="form-control" id="inputCompany" placeholder="Company" ng-model="user.company" ng-required="true">
+                <input type="text" class="form-control" id="inputCompany" placeholder="Company" ng-model="contact.company" ng-required="true">
             </div>
         </div>                            
-        <button ng-disabled="contactsForm.$invalid" type="button" class="btn btn-default" ng-click="submitThisForm(user)">Save Contact</button>
+        <button ng-disabled="contactsForm.$invalid" type="button" class="btn btn-default" ng-click="submitThisForm(contact)">Save Contact</button>
     </form>    
 </div>
