adding detail route

--- a/styles/main.css
+++ b/styles/main.css
@@ -56,3 +56,12 @@ a:focus, a:hover {
 
 #pencil {
   padding-right: 5px; }
+
+#magnifying {
+  padding-right: 5px; }
+
+#new_contact {
+  margin-top: -210px; }
+
+#edit_contact {
+  margin-top: -210px; }
