--- a/sass/main.scss
+++ b/sass/main.scss
@@ -67,3 +67,12 @@ a:focus, a:hover {
 #pencil {
     padding-right: 5px;
 }
+#magnifying {
+    padding-right: 5px;
+}
+#new_contact {
+    margin-top: -210px;
+}
+#edit_contact {
+    margin-top: -210px;
+}
