--- a/partials/contacts-view.html
+++ b/partials/contacts-view.html
@@ -1,7 +1,7 @@
 <div class='view_contacts'>        
-    <h1 ng-show="contacts.length" id="contacts_heading">Contacts</h1>
+    <h1 ng-if="contacts.length > 0" id="contacts_heading">Contacts</h1>
     <div id='contacts'>
-        <div ng-show="!contacts.length" class="text-center">
+        <div ng-if="contacts.length == 0" class="text-center">
             <h1>Looks like you need some friends.</h1>                    
             <button ng-click="routeToNewContacts()" class="btn btn-primary new-btn">Add Contact</button> 
         </div>     
