cleaned up code

--- a/partials/contacts-favorites.html
+++ b/partials/contacts-favorites.html
@@ -1,6 +1,6 @@
 <div class='view_contacts'>        
-    <h1 ng-if="contacts.length > 0" id="contacts_heading">Favorites</h1>
-    <div id='contacts'>
+    <h1 ng-if="contacts.length > 0" class="contacts_heading">Favorites</h1>
+    <div id='favorite_contacts'>
         <div ng-if="contacts.length == 0">
             <div class="text-center">
                 <h1>Looks like you need some friends.</h1>                    
