--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,7 +39,7 @@ a:focus, a:hover {
         margin-bottom: 15px;
     }
 }
-#contacts_heading {
+.contacts_heading {
     margin-left: 18px;    
 }
 .view_contacts {
