--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ a:focus, a:hover {
   right: 230px;
   margin-bottom: 15px; }
 
-#contacts_heading {
+.contacts_heading {
   margin-left: 18px; }
 
 .view_contacts {
