--- a/styles/main.css
+++ b/styles/main.css
@@ -66,51 +66,50 @@ a:focus, a:hover {
 #edit_contact {
   margin-top: -210px; }
 
-#search_container .search-form .form-group {
-  transition: all 0.35s, border-radius 0s;
-  width: 32px;
-  height: 32px;
-  background-color: #fff;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-  border-radius: 25px;
-  border: 1px solid #ccc; }
-
-#search_container .search-form .form-group input.form-control {
-  padding-right: 20px;
-  border: 0 none;
-  background: transparent;
-  box-shadow: none;
-  display: block; }
-
-#search_container .search-form .form-group input.form-control::-webkit-input-placeholder {
-  display: none; }
-
-#search_container .search-form .form-group input.form-control:-moz-placeholder {
-  /* Firefox 18- */
-  display: none; }
-
-#search_container .search-form .form-group input.form-control::-moz-placeholder {
-  /* Firefox 19+ */
-  display: none; }
-
-#search_container .search-form .form-group input.form-control:-ms-input-placeholder {
-  display: none; }
-
-#search_container .search-form .form-group:hover,
-#search_container .search-form .form-group.hover {
-  width: 100%;
-  border-radius: 4px 25px 25px 4px; }
-
-#search_container .search-form .form-group span.form-control-feedback {
+#search_container {
   position: absolute;
-  top: -1px;
-  right: -2px;
-  z-index: 2;
-  display: block;
-  width: 34px;
-  height: 34px;
-  line-height: 34px;
-  text-align: center;
-  color: #3596e0;
-  left: initial;
-  font-size: 14px; }
+  top: 14px;
+  left: 5px; }
+  #search_container .search-form .form-group {
+    transition: all 0.35s, border-radius 0s;
+    width: 32px;
+    height: 32px;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    border-radius: 25px;
+    border: 1px solid #ccc; }
+  #search_container .search-form .form-group input.form-control {
+    padding-right: 20px;
+    border: 0 none;
+    background: transparent;
+    box-shadow: none;
+    display: block; }
+  #search_container .search-form .form-group input.form-control::-webkit-input-placeholder {
+    display: none; }
+  #search_container .search-form .form-group input.form-control:-moz-placeholder {
+    /* Firefox 18- */
+    display: none; }
+  #search_container .search-form .form-group input.form-control::-moz-placeholder {
+    /* Firefox 19+ */
+    display: none; }
+  #search_container .search-form .form-group input.form-control:-ms-input-placeholder {
+    display: none; }
+  #search_container .search-form .form-group:hover,
+  #search_container .search-form .form-group.hover {
+    width: 100%;
+    border-radius: 4px 25px 25px 4px; }
+  #search_container .search-form .form-group span.form-control-feedback {
+    position: absolute;
+    top: -1px;
+    right: -2px;
+    z-index: 2;
+    display: block;
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    color: #3596e0;
+    left: initial;
+    font-size: 14px; }
+  #search_container .fix_search_width {
+    width: 28%; }
