--- a/partials/contacts-view.html
+++ b/partials/contacts-view.html
@@ -1,7 +1,7 @@
 <div class='view_contacts'>        
     <h1 ng-if="contacts.length > 0" id="contacts_heading">Contacts</h1>
-    <div id="search_container" class="container">
-            <form action="" class="search-form fix_search_width">
+    <div class="container search_container">
+            <form class="search-form fix_search_width">
                 <div class="form-group has-feedback">
                     <label for="search" class="sr-only">Search</label>
                     <input type="text" class="form-control" name="search" id="search" placeholder="search contacts" ng-model="searchText">
@@ -11,13 +11,13 @@
         </div>   
     <div id='contacts'>
         <div ng-if="contacts.length == 0" class="text-center">
-            <h1>Looks like you need some friends.</h1>                    
+            <h1>Looks like you need to add some contacts.</h1>                    
             <button ng-click="routeToNewContacts()" class="btn btn-primary new-btn">Add Contact</button> 
-        </div>          
+        </div>                
+
         <div ng-repeat="contact in contacts | filter: searchText" class="col-sm-6 col-md-4">
             <div class="thumbnail contact">                                    
-                <div class="caption">
-
+                <div class="caption">                    
                     <div class="panel panel_margin_fix panel-info">
                         <div class="panel-heading">                                
                             <div class='icon_positioning'>
