--- a/styles/main.css
+++ b/styles/main.css
@@ -46,7 +46,8 @@ a:focus, a:hover {
 
 .contact {
   box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.75);
-  position: relative; }
+  position: relative;
+  border-radius: 14px; }
 
 .icon_positioning {
   float: right; }
@@ -60,17 +61,20 @@ a:focus, a:hover {
 #magnifying {
   padding-right: 5px; }
 
+#upload_icon {
+  padding-right: 5px; }
+
 #new_contact {
   margin-top: -210px; }
 
 #edit_contact {
   margin-top: -210px; }
 
-#search_container {
+.search_container {
   position: absolute;
   top: 14px;
   left: 5px; }
-  #search_container .search-form .form-group {
+  .search_container .search-form .form-group {
     transition: all 0.35s, border-radius 0s;
     width: 32px;
     height: 32px;
@@ -78,27 +82,27 @@ a:focus, a:hover {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
     border-radius: 25px;
     border: 1px solid #ccc; }
-  #search_container .search-form .form-group input.form-control {
+  .search_container .search-form .form-group input.form-control {
     padding-right: 20px;
     border: 0 none;
     background: transparent;
     box-shadow: none;
     display: block; }
-  #search_container .search-form .form-group input.form-control::-webkit-input-placeholder {
+  .search_container .search-form .form-group input.form-control::-webkit-input-placeholder {
     display: none; }
-  #search_container .search-form .form-group input.form-control:-moz-placeholder {
+  .search_container .search-form .form-group input.form-control:-moz-placeholder {
     /* Firefox 18- */
     display: none; }
-  #search_container .search-form .form-group input.form-control::-moz-placeholder {
+  .search_container .search-form .form-group input.form-control::-moz-placeholder {
     /* Firefox 19+ */
     display: none; }
-  #search_container .search-form .form-group input.form-control:-ms-input-placeholder {
+  .search_container .search-form .form-group input.form-control:-ms-input-placeholder {
     display: none; }
-  #search_container .search-form .form-group:hover,
-  #search_container .search-form .form-group.hover {
+  .search_container .search-form .form-group:hover,
+  .search_container .search-form .form-group.hover {
     width: 100%;
     border-radius: 4px 25px 25px 4px; }
-  #search_container .search-form .form-group span.form-control-feedback {
+  .search_container .search-form .form-group span.form-control-feedback {
     position: absolute;
     top: -1px;
     right: -2px;
@@ -111,5 +115,9 @@ a:focus, a:hover {
     color: #3596e0;
     left: initial;
     font-size: 14px; }
-  #search_container .fix_search_width {
+  .search_container .fix_search_width {
     width: 28%; }
+
+.img_size {
+  width: 100px;
+  height: 100px; }
