--- a/partials/contacts-view.html
+++ b/partials/contacts-view.html
@@ -29,6 +29,9 @@
                             <h1 class="panel-title">{{contact.name_first}} {{contact.name_last}}</h1>
                         </div>
                         <div class="panel-body">
+                            <div>
+                                <img ng-class="{'img_size': contact.filetype}" src="data:{{contact.filetype}};base64,{{contact.base64}}">
+                            </div>
                             <p class='phone'><i class="fa fa-phone" aria-hidden="true"></i> {{contact.phone}}</p>                    
                             <p class='email'><i class="fa fa-envelope" aria-hidden="true"></i> {{contact.email}}</p>      
                         </div>              
